--- a/index.html
+++ b/index.html
@@ -25,9 +25,33 @@
 
   <link rel="stylesheet" href="./css/style.css">
   <title>Joaoquinto - portfólio</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JTF16WWPZH"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-JTF16WWPZH');
+  </script>
+  <script src="https://kit.fontawesome.com/51e561b74b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <header>
+    <nav id="container-menu">
+      <a href="https://joaoquinto.github.io/joaoquinto-portfolio/" id="menu-logo">Joãoquinto</a>
+      <button role="menu" aria-expanded="false" id="menu-hamburguer"><i class="fas fa-bars icon"></i></button>
+      <ul class="menu-hamburguer-item" class="ativo">
+        <li><a href="" class="menu-link">Sobre</a></li>
+        <li><a href="" class="menu-link">Habilidades</a></li>
+        <li><a href="" class="menu-link">Projetos</a></li>
+        <li><a href="" class="menu-link">Formação</a></li>
+        <li><a href="" class="menu-link">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
