--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="shortcut icon" href="./assets/icons/favicon-joaoquinto.ico" type="image/x-icon">
   <link rel="icon" href="./assets/icons/favicon-joaoquinto.ico" type="image/x-icon">
-  <title>Joaoquinto - portfólio</title>
+  <title>Joãoquinto - portfólio</title>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JTF16WWPZH"></script>
   <script>
