--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <!-- Metatag Facebook, Whatsapp e instagram -->
   <meta property="og:url" content="https://joaoquinto.github.io/joaoquinto-portfolio/" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Joaoquinto - portfólio" />
+  <meta property="og:title" content="Joãoquinto - portfólio" />
   <meta property="og:description" content="Olá, meu nome é João Victor Oliveira Pereira e seja bem vindo ao meu portfólio." />
   <meta property="og:image" content="https://raw.githubusercontent.com/joaoquinto/joaoquinto-portfolio/main/assets/icons/joao-foto.jpg" />
 
   <!-- Metatag Twitter -->
-  <meta name="twitter:title" content="Joaoquinto - portfólio">
+  <meta name="twitter:title" content="Joãoquinto - portfólio">
   <meta name="twitter:description" content="Olá, meu nome é João Victor Oliveira Pereira e seja bem vindo ao meu portfólio.">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/joaoquinto/joaoquinto-portfolio/main/assets/icons/joao-foto.jpg">
 
