--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
   <header>
     <nav id="container-menu">
       <a href="https://joaoquinto.github.io/joaoquinto-portfolio/" id="menu-logo">Joãoquinto</a>
-      <button role="menu" aria-expanded="false" aria-label="dropdown menu" aria-orientation="vertical" id="menu-hamburguer"><i class="fas fa-bars fa-lg icon"></i></button>
-      <ul class="menu-hamburguer-item" class="ativo">
-        <li ><a href="" class="menu-link">Sobre</a></li>
-        <li ><a href="" class="menu-link">Habilidades</a></li>
-        <li ><a href="" class="menu-link">Projetos</a></li>
-        <li ><a href="" class="menu-link">Formação</a></li>
-        <li ><a href="" class="menu-link">Contato</a></li>
+      <button id="menu-hamburguer"><i class="fas fa-bars fa-lg icon" aria-label="Button dropdown" title="Button dropdown"></i></button>
+      <ul class="menu-hamburguer-item" class="ativo" role="menu" aria-expanded="false" aria-label="Dropdown menu" aria-orientation="vertical">
+        <li role="menuitem"><a href="#" class="menu-link">Sobre</a></li>
+        <li role="menuitem"><a href="#" class="menu-link">Habilidades</a></li>
+        <li role="menuitem"><a href="#" class="menu-link">Projetos</a></li>
+        <li role="menuitem"><a href="#" class="menu-link">Formação</a></li>
+        <li role="menuitem"><a href="#" class="menu-link">Contato</a></li>
       </ul>
     </nav>
   </header>
