--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
   <header>
     <nav id="container-menu">
-      <a href="https://joaoquinto.github.io/joaoquinto-portfolio/" id="menu-logo">Joãoquinto</a>
+      <a href="https://joaoquinto.github.io/joaoquinto-portfolio/" id="menu-logo" translate="no">Joãoquinto</a>
       <button id="menu-hamburguer"><i class="fas fa-bars fa-lg icon" aria-label="Button dropdown" title="Button dropdown"></i></button>
       <ul class="menu-hamburguer-item" class="ativo" role="menu" aria-expanded="false" aria-label="Dropdown menu" aria-orientation="vertical">
         <li role="menuitem"><a href="#" class="menu-link">Sobre</a></li>
