Resolvendo problemas da issue #8 no mobile

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
   <section id="container-habilidades">
     <h2 class="title">Habilidades</h2>
     <ul id="habilidades-lista">
-      <li class="item-lista html"><img title="HTML5" src="./assets/icons/html-logo.png" alt="Logo da linguagem de marcação HTML5"></li>
-      <li class="item-lista css"><img title="CSS3" src="./assets/icons/css-logo.png" alt="Logo da linguagem de estilo CSS3 "></li>
-      <li class="item-lista"><img title="AdobeXD" src="./assets/icons/AdobeXD-logo.png" alt="Logo da ferramenta de design AdobeXD"></li>
-      <li class="item-lista"><img title="MYSQL" src="./assets/icons/mysql-logo.png" alt="Logo do SGBD MYSQL"></li>
-      <li class="item-lista"><img title="Git" src="./assets/icons/git-logo.png" alt="Logo do sistema de controle de versões Git"></li>
+      <li class="item-lista html"><img title="HTML5" src="./assets/icons/html.svg" alt="Logo da linguagem de marcação HTML5"></li>
+      <li class="item-lista css"><img title="CSS3" src="./assets/icons/css.svg" alt="Logo da linguagem de estilo CSS3 "></li>
+      <li class="item-lista"><img title="AdobeXD" src="./assets/icons/Adobe-XD.svg" alt="Logo da ferramenta de design AdobeXD"></li>
+      <li class="item-lista"><img title="MYSQL" src="./assets/icons/mysql.svg" alt="Logo do SGBD MYSQL"></li>
+      <li class="item-lista"><img title="Git" src="./assets/icons/git.svg" alt="Logo do sistema de controle de versões Git"></li>
       <li class="item-lista"><img title="Google Analytics" src="./assets/icons/Google-Analytics-logo.svg" alt="Logo da ferramenta de monitoramento Google Analytics"></li>
     </ul>
     <a href="mailto:joaovictoroliveirapereira6522@gmail.com?subject=Contato%20para%20mais%20informa%C3%A7%C3%B5es" target="_blank" rel="noopener noreferrer" class="contateme">Entre em contato</a>
