Corrigindo erro de português no paragráfo

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <section id="container-sobre">
     <h2 class="title">Sobre</h2>
     <img src="./assets/icons/joao-foto.jpg" alt="Foto do criador da página, usando uma camisa polo vermelha que tem uma gola preta.">
-    <p>Olá, meu nome é João e seja bem vindo ao meu portólio.
+    <p>Olá, meu nome é João e seja bem vindo ao meu portfólio.
       Aqui vai ser o lugar onde eu irei colocar as minhas informações e projetos pessoais, sinta se à vontade para entrar
       em contato para mais informações ou bater um papo.</p>
     <a href="mailto:joaovictoroliveirapereira6522@gmail.com?subject=Contato%20para%20mais%20informa%C3%A7%C3%B5es" target="_blank" rel="noopener noreferrer" class="contateme">Entre em contato</a>
