Modificando o title-card h3>a:blank

--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
           </a>
         </li>
         <li>
-          <h3 class="title-card">Natarajan</h3>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/natarajan" target="_blank" rel="noopener noreferrer">Natarajan</a>
+          </h3>
         </li>
         <li>
           <ul class="container-infos">
@@ -139,7 +141,11 @@
           </a>
         </li>
         <li>
-          <h3 class="title-card">Getshape</h3>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/getshape" target="_blank" rel="noopener noreferrer">
+              Getshape
+            </a>
+          </h3>
         </li>
         <li>
           <ul class="container-infos">
@@ -157,7 +163,11 @@
           </a>
         </li>
         <li>
-          <h3 class="title-card">Spacer</h3>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/spacer" target="_blank" rel="noopener noreferrer">
+              Spacer
+            </a>
+          </h3>
         </li>
         <li>
           <ul class="container-infos">
@@ -175,7 +185,11 @@
           </a>
         </li>
         <li>
-          <h3 class="title-card">Athena</h3>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/billie" target="_blank" rel="noopener noreferrer">
+              Athena
+            </a>
+          </h3>
         </li>
         <li>
           <ul class="container-infos">
@@ -194,7 +208,11 @@
           </a>
         </li>
         <li>
-          <h3 class="title-card">3 column preview card</h3>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/card-frontend-mentor" target="_blank" rel="noopener noreferrer">
+              3 column preview card
+            </a>
+          </h3>
         </li>
         <li>
           <ul class="container-infos">
@@ -212,7 +230,11 @@
           </a>
         </li>
         <li>
-          <h3 class="title-card">NFT - Preview</h3>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/nft-card-componet" target="_blank" rel="noopener noreferrer">
+              NFT - Preview
+            </a>
+          </h3>
         </li>
         <li>
           <ul class="container-infos">
@@ -230,7 +252,11 @@
           </a>
         </li>
         <li>
-          <h3 class="title-card">Order Summary</h3>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/summary-order" target="_blank" rel="noopener noreferrer">
+              Order Summary
+            </a>
+          </h3>
         </li>
         <li>
           <ul class="container-infos">
