--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li role="menuitem"><a href="#container-sobre" class="menu-link">Sobre</a></li>
         <li role="menuitem"><a href="#container-habilidades" class="menu-link">Habilidades</a></li>
         <li role="menuitem"><a href="#container-projetos" class="menu-link">Projetos</a></li>
-        <li role="menuitem"><a href="#container-formacao" class="menu-link">Formação</a></li>
+        <li role="menuitem"><a href="#container-educacao" class="menu-link">Educação</a></li>
         <li role="menuitem"><a href="#container-contato" class="menu-link">Contato</a></li>
       </ul>
     </nav>
@@ -269,16 +269,25 @@
     </div>
 
   </section>
-  <section id="container-formacao">
-    <h2 class="title">Formação</h2>
+  <section id="container-educacao">
+    <h2 class="title">Educação</h2>
   </section>
   <section id="container-contato">
     <h2 class="title">Contato</h2>
+    <ul id="contato">
+      <li><a href="mailto:joaovictoroliveirapereira6522@gmail.com" _blank" rel="noopener noreferrer">Email: Joaovictoroliveirapereira6522@gmail.com</a></li>
+      <li><a href="https://api.whatsapp.com/send/?phone=%2B5571991792684&text&app_absent=0" target="_blank" rel="noopener noreferrer">Whatsapp: +55 71 991792684</a></li>
+      <li> <a href="https://github.com/joaoquinto" target="_blank" rel="noopener noreferrer">Github: @joaoquinto</a></li>
+      <li><a href="https://www.linkedin.com/in/joaoouinto/" target="_blank" rel="noopener noreferrer">Meu LinkedIn
+        </a></li>
+      <li><a href="https://docs.google.com/document/d/1j8QpPgyo1kaxeX9Eh_s550RW0OmBAmRzAJoM3V0doKg/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Meu Currículo</a></li>
+    </ul>
   </section>
-  <script type="module" src="./js/script.js"></script>
   <footer>
     <a href="https://github.com/joaoquinto" target="_blank" rel="noopener noreferrer">joaoquinto &copy; 2022</a>
+    <button class="slideToUp" aria-label="Button para o topo" title=" Button para o topo"></button>
   </footer>
+  <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
