Issue #27, corrigindo erro na centralização vertical do header

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <nav id="container-menu">
       <a href="https://joaoquinto.github.io/joaoquinto-portfolio/" id="menu-logo">Joãoquinto</a>
       <button id="menu-hamburguer" aria-label="Button dropdown" title="Button dropdown"><i class="fas fa-bars fa-lg icon"></i></button>
-      <ul class="menu-hamburguer-item" role="menu" aria-expanded="false" aria-label="Dropdown menu" aria-orientation="vertical">
+      <ul class="menu-hamburguer-item" role="menu" aria-expanded="false" aria-label="Dropdown menu" aria-orientation="">
         <li role="menuitem"><a href="#container-sobre" class="menu-link">Sobre</a></li>
         <li role="menuitem"><a href="#container-habilidades" class="menu-link">Habilidades</a></li>
         <li role="menuitem"><a href="#container-projetos" class="menu-link">Projetos</a></li>
@@ -285,7 +285,8 @@
   </section>
   <footer>
     <a href="https://github.com/joaoquinto" target="_blank" rel="noopener noreferrer">joaoquinto &copy; 2022</a>
-    <button class="slideToUp" aria-label="Button para o topo" title=" Button para o topo"></button>
+    <button class="slideToUp" aria-label="Button para o topo" title=" Button para o topo">
+      &#11121;</button>
   </footer>
   <script type="module" src="./js/script.js"></script>
 </body>
