Adição do projeto Tcompress, Adição do icon js, mudança no icon slide to up

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
     gtag('config', 'G-JTF16WWPZH');
   </script>
-  <script src="https://kit.fontawesome.com/51e561b74b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -77,6 +76,12 @@
       </li>
 
       <li class="item-lista">
+        <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript" target="_blank" rel="noopener noreferrer">
+          <img title="JavaScript" src="./assets/icons/javascript.svg" alt="Logo da linguagem javascript ">
+        </a>
+      </li>
+
+      <li class="item-lista">
         <a href="https://www.adobe.com/br/products/xd.html" target="_blank" rel="noopener noreferrer">
           <img title="AdobeXD" src="./assets/icons/Adobe-XD.svg" alt="Logo da ferramenta de design AdobeXD">
         </a>
@@ -113,6 +118,24 @@
     <h2 class="title">Projetos</h2>
 
     <div id="container">
+
+      <ul class="container-card" title="Tcompress é um projeto feito totalmente em Flutter, com o intuito de utilizar novos Widgets e packages e facilitar o cálculo da Taxa de Compressão de um motor">
+        <li>
+          <a href="https://joaoquinto.github.io/compress/web/#/" target="_blank" rel="noopener noreferrer">
+            <img class="img-card" src="./assets/icons/tcompress.svg" alt="Uma imagem de uma engrenagem com uma chave inglesa">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/compress" target="_blank" rel="noopener noreferrer">Tcompress</a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>Flutter</strong></li>
+          </ul>
+        </li>
+      </ul>
 
       <ul class="container-card" title="Natarajan é um template para exposição de fotos de modelos. Esse foi o meu primeiro site">
         <li>
@@ -285,10 +308,14 @@
   </section>
   <footer>
     <a href="https://github.com/joaoquinto" target="_blank" rel="noopener noreferrer">joaoquinto &copy; 2022</a>
-    <button class="slideToUp" aria-label="Button para o topo" title=" Button para o topo">
-      &#11121;</button>
+    <button class="slideToUp" aria-label="Button para o topo" title=" Button para o topo"> ↥
+    </button>
   </footer>
+  <script src="https://kit.fontawesome.com/51e561b74b.js" crossorigin="anonymous"></script>
   <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
+
+
+</button>
