--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:description" content="Olá, meu nome é João Victor Oliveira Pereira e seja bem vindo ao meu portfólio.">
   <meta name="twitter:image" content="https://raw.githubusercontent.com/joaoquinto/joaoquinto-portfolio/main/assets/icons/joao-foto.jpg">
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/style.min.css">
   <link rel="shortcut icon" href="./assets/icons/favicon-joaoquinto.ico" type="image/x-icon">
   <link rel="icon" href="./assets/icons/favicon-joaoquinto.ico" type="image/x-icon">
   <title>Joãoquinto - portfólio</title>
@@ -294,6 +294,30 @@
   </section>
   <section id="container-educacao">
     <h2 class="title">Educação</h2>
+    <div class="educacao">
+
+      <div class="container-item">
+        <h3 class="accordion-title">Formações</h3>
+        <ul class="container-accordion">
+          <li>Ensino médio - Colégio Estadual Alberto Santos Dumont</li>
+          <li>Técnico de Desenvolvimento de Sistemas - SENAI</li>
+          <li>Análise e Desenvolvimento de Sistemas - 2° Semestre - Estácio</li>
+        </ul>
+      </div>
+
+      <div class="container-item licencas">
+        <h3 class="accordion-title">Licenças e certificados</h3>
+        <ul class="container-accordion">
+          <li><a href="https://www.origamid.com/certificate/80e59b31/" target="_blank" rel="noopener noreferrer">Web design - Origamid</a></li>
+          <li><a href="https://www.origamid.com/certificate/ade846c1/" target="_blank" rel="noopener noreferrer">CSS Flexbox - Origamid</a></li>
+          <li><a href="http://origamid.com/certificate/04e03720" target="_blank" rel="noopener noreferrer">Css Avançado Posicionamento - Origamid</a></li>
+          <li><a href="https://www.origamid.com/certificate/3bc15e5e/" target="_blank" rel="noopener noreferrer">CSS Grid - Origamid</a></li>
+          <li><a href="https://static.lms.ebaconline.com.br/certs/486a18a3-2005-4412-be19-d140c064de7e.pdf" target="_blank" rel="noopener noreferrer">Workshop: Os segredos para modelar um banco de dados — EBAC</a></li>
+        </ul>
+
+      </div>
+
+    </div>
   </section>
   <section id="container-contato">
     <h2 class="title">Contato</h2>
