Plugin do Vlibras

--- a/index.html
+++ b/index.html
@@ -336,6 +336,16 @@
     <button class="slideToUp" aria-label="Button para o topo" title=" Button para o topo"> ↥
     </button>
   </footer>
+  <div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
+  <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
   <script type="module" src="./js/script.js"></script>
 </body>
 
