Issue #42 e Adicioando novo projeto

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <meta name="description" content="Olá, meu nome é João Victor Oliveira Pereira e seja bem vindo ao meu portfólio.">
-  <meta name="keywords" content="Portfólio,Flexbox,CSS3,CSS Grid,HTML5,Google Analytics,@joaoquinto,joaoquinto,AdobeXD,Análise e Desenvolvimento de Sistemas,  ">
+  <meta name="keywords" content="Portfólio,Flexbox,CSS3,CSS Grid,HTML5,Google Analytics,@joaoquinto,joaoquinto,AdobeXD,Análise e Desenvolvimento de Sistemas, frontend mentor, Projetos, Educação , Licenças e certificados">
   <meta name="author" content="João Victor Oliveira Pereira, github: @joaoquinto">
 
   <!-- Meta tags de compartilhamento -->
@@ -161,7 +161,7 @@
       <ul class="container-card" title="Get shape é uma plataforma de corrida, com o intuito de adquirir novos clientes e fazê-los entrar em forma no verão.">
         <li>
           <a href="https://joaoquinto.github.io/getshape/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/getshape.svg" alt="Um imagem com uma mulher correndo e um texto dizendo Whats up?">
+            <img class="img-card" src="./assets/icons/getshape.svg" alt="Um imagem com uma mulher correndo">
           </a>
         </li>
         <li>
@@ -228,7 +228,7 @@
   ">
         <li>
           <a href="https://joaoquinto.github.io/card-frontend-mentor/" target="_blank" rel="noopener noreferrer">
-            <img class="img-card" src="./assets/icons/column-preview.svg" alt="Uma imagem de um card laranja, com informações sobre SEDANS">
+            <img class="img-card" src="./assets/icons/column-preview.svg" alt="Uma imagem de três cards, cada um com um tipo de carro SEDAN, SUVS, Luxury">
           </a>
         </li>
         <li>
@@ -279,6 +279,27 @@
           <h3 class="title-card">
             <a href="https://github.com/joaoquinto/summary-order" target="_blank" rel="noopener noreferrer">
               Order Summary
+            </a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>HTML5</strong></li>
+            <li><strong>CSS3</strong></li>
+            <li><strong>Flexbox</strong></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="container-card" title="Esse é um desafio da plataforma frontend mentor. É um card para o escaneamento do QRcode.">
+        <li>
+          <a href="https://joaoquinto.github.io/qr-code-component/" target="_blank" rel="noopener noreferrer">
+            <img class="img-card" src="./assets/icons/card-component.svg" alt="Uma imagem de um QRcode azul que leva para a plataforma frontend mentor">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/qr-code-component" target="_blank" rel="noopener noreferrer">
+              Card Component
             </a>
           </h3>
         </li>
@@ -350,6 +371,3 @@
 </body>
 
 </html>
-
-
-</button>
