Adicionando projetos ao portfólio

--- a/index.html
+++ b/index.html
@@ -120,6 +120,61 @@
 
     <div id="container">
 
+      <ul class="container-card" title="IMC é um projeto feito em Flutter, com o intuito de utilizar novos Widgets, packages, POO e facilitar o cálculo do índice de massa corporal">
+        <li>
+          <a href="https://github.com/joaoquinto/Imc" target="_blank" rel="noopener noreferrer">
+            <img class="img-card" src="./assets/icons/imc.svg" alt="Uma imagem com fundo verde e com a sigla IMC">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/Imc" target="_blank" rel="noopener noreferrer">IMC</a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>Flutter</strong></li>
+            <li><strong>Codemagic.io</strong></li>
+          </ul>
+        </li>
+      </ul>
+
+      <ul class="container-card" title="Conversor é um projeto feito em Flutter, com o intuito de facilitar a conversão de unidades de medidas.">
+        <li>
+          <a href="https://joaoquinto.github.io/conversor/index.html?fbclid=IwAR1GL0yaGlreWgx8ss2Jo0HqkuQ8SkjNMvQoSR_fFMkhc4Hm_gI0TBfiFac#/" target="_blank" rel="noopener noreferrer">
+            <img class="img-card" src="./assets/icons/conversor.svg" alt="Uma imagem de um input vermelho e uma caixa de texto dizendo informe a sua quilometragem para converter para milha">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/conversor" target="_blank" rel="noopener noreferrer">Conversor</a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>Flutter</strong></li>
+          </ul>
+        </li>
+      </ul>
+
+      <ul class="container-card" title="Login ui é uma tentativa de fazer um tela de login mobile em flutter">
+        <li>
+          <a href="https://github.com/joaoquinto/uiflutter/tree/master/login_ui" target="_blank" rel="noopener noreferrer">
+            <img class="img-card" src="./assets/icons/login.svg" alt="Uma imagem de uma tela de login mobile">
+          </a>
+        </li>
+        <li>
+          <h3 class="title-card">
+            <a href="https://github.com/joaoquinto/uiflutter/tree/master/login_ui" target="_blank" rel="noopener noreferrer">Login UI</a>
+          </h3>
+        </li>
+        <li>
+          <ul class="container-infos">
+            <li><strong>Flutter</strong></li>
+          </ul>
+        </li>
+      </ul>
+
       <ul class="container-card" title="Tcompress é um projeto feito totalmente em Flutter, com o intuito de utilizar novos Widgets e packages e facilitar o cálculo da Taxa de Compressão de um motor">
         <li>
           <a href="https://joaoquinto.github.io/compress/web/#/" target="_blank" rel="noopener noreferrer">
@@ -134,6 +189,7 @@
         <li>
           <ul class="container-infos">
             <li><strong>Flutter</strong></li>
+            <li><strong>Codemagic.io</strong></li>
           </ul>
         </li>
       </ul>
